--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.swiper-container {
+	width: 100% !important;
+}
+
 .swiper {
 	width: 100%;
 	height: 100%;
@@ -13,7 +17,7 @@
 	background: #fff;
 
 	/* Center slide text vertically */
-	display: -webkit-box;
+	/* display: -webkit-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
@@ -24,20 +28,20 @@
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	-webkit-align-items: center;
-	align-items: center;
+	align-items: center; */
 }
 
 .swiper-slide img {
-	display: block;
+	/* display: block; */
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
-.swiper {
+/* .swiper {
 	margin-left: auto;
 	margin-right: auto;
-}
+} */
 .swiper-button-prev {
 	left: 30;
 	color: red !important;
